# esp32-maxim-7219-7221

./: .gitignore  CMakeLists.txt  README.md  _config.yml  esp32-maxim-7219-7221.code-workspace  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
components/max7219_7221/: README.md  idf_component.yml
components/max7219_7221/examples/max7219_7221_advanced_cascade/: CMakeLists.txt  README.md
components/max7219_7221/examples/max7219_7221_basic/: CMakeLists.txt  README.md
components/max7219_7221/examples/max7219_7221_cascade/: CMakeLists.txt  (+1 more)
components/max7219_7221/include/: max7219_7221.h
components/max7219_7221/src/: max7219_7221.c
components/maxim-7219-7221/: CMakeLists.txt  Kconfig
components/maxim-7219-7221/examples/maxim-7219-7221-basic/: CMakeLists.txt
components/maxim-7219-7221/examples/maxim-7219-7221-basic/main/: idf_component.yml
components/maxim-7219-7221/include/: maxim-7219-7221.h
components/maxim-7219-7221/src/: maxim-7219-7221.c
components/maxim_7219_7221/: CMakeLists.txt  README.md  idf_component.yml
components/maxim_7219_7221/include/: maxim-7219-7221.h  maxim_7219_7221.h
components/maxim_7219_7221/src/: maxim-7219-7221.c  maxim_7219_7221.c
dsview/: .gitignore
dsview/max7219_chain/: __init__.py  max7219_chain  pd.py
main/: CMakeLists.txt  main.c
maxim-7219-7221/: CMakeLists.txt
maxim-7219-7221/include/: maxim-7219-7221.h
openocd/: esp32-s3-builtin-usb-to-jtag.cfg
openocd/interface/: ft2232hl-dual-channel-4-wires-jtag.cfg  ft2232hl-dual-channel-full-jtag.cfg  ft4232hl-quad-channel-4-wires-jtag.cfg
(+58 files in other folders)
